@@ -8,11 +8,15 @@ features: [
     "dpkg", "rpm",
     "dokan", "fuse"]
 
-[source_package]
+[documentation]
 url: "https://googledrive.com/host/0B3fBvzttpiiSNUVYSFF1TmRONmc/"
+
+[source_package]
+url: "https://github.com/libyal/libluksde/releases"
 
 [git]
 url: "https://github.com/libyal/libluksde.git"
+build_dependencies: []
 
 [development]
 main_object: "volume"
