@@ -1473,14 +1473,14 @@ int __stdcall luksdemount_dokan_GetVolumeInformation(
 	LIBCSYSTEM_UNREFERENCED_PARAMETER( file_info )
 
 	if( ( volume_name != NULL )
-	 && ( volume_name_size > (DWORD) ( sizeof( wchar_t ) * 5 ) ) )
+	 && ( volume_name_size > (DWORD) ( sizeof( wchar_t ) * 7 ) ) )
 	{
 		/* Using wcsncpy seems to cause strange behavior here
 		 */
 		if( memory_copy(
 		     volume_name,
-		     L"QCOW",
-		     sizeof( wchar_t ) * 5 ) == NULL )
+		     L"LUKSDE",
+		     sizeof( wchar_t ) * 7 ) == NULL )
 		{
 			libcerror_error_set(
 			 &error,
@@ -1560,7 +1560,6 @@ int __stdcall luksdemount_dokan_Unmount(
 }
 
 #endif
-
 
 /* The main program
  */
